# Molecular-Dynamics-Simulator

./: .gitignore  CMakeLists.txt  MDSVS.sln  MDSVS.vcxproj  MDSVS.vcxproj.filters  README.md  TODO.txt  abstract_factory.cpp  boundary_conditions.cpp  builder.cpp  command.cpp  concretecommands.cpp  data.in  datasaver.cpp  director.cpp  errorcodes.cpp  filehandler.h  fragment1.fs  getnamelist.cpp  gitignore  glad.c  histo.txt  inputhandler.cpp  inputhandler.h  lattice.cpp  leapfrog.cpp  leapfrog.h  main.cpp  menu.cpp  outputhandler.cpp  outputhandler.h  physical.h  progressbar.cpp  progressbar.h  pseudocode.txt  rand2D.h  render.cpp  render.h  shader.h  simulation.cpp  (+13 more)
Dependencies/include/glad/: glad.h
External Non-compiled Libraries/: explanation.txt
Google_tests/: BoundaryConditionTest.cpp  CMakeLists.txt  ConverterTests.cpp  SimulationSetupTest.cpp
Headers/: abstract_factory.h  boundary_conditions.h  builder.h  concretecommands.h  constants.h  datasaver.h  director.h  errorcodes.h  leapfrog.h  menu.h  progressbar.h  simulation.h  simulation2d.h  simulation2dap.h  simulation3dcs.h  vector_operations.h
Headers/core/: command.h  concretecommands.h  constants.h  errorcodes.h  types.h
Headers/simulation/: abstract_factory.h  boundary_conditions.h  builder.h  director.h  simulation.h  simulation2dap.h  simulation3dcs.h
Headers/ui/: menu.h
Headers/utils/: datasaver.h  leapfrog.h  progressbar.h  vector_operations.h
MDSVS/x64/Debug/: MDSVS.exe.recipe  MDSVS.ilk  glm.cppm.obj.dt.d.json  glm.cppm.obj.dt.module.json  glm.cppm.obj.dt.module.json.command  vc143.idb
MDSVS/x64/Debug/MDSVS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MDSVS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Parameters/: config.ini  explanation.txt
Resources/: explanation.txt  properties.csv  results.csv  velocity_distribution.csv
hfiles/: statistics.h  types.h
other/: TODO.txt
